--- a/Lading_page_v1/index.html
+++ b/Lading_page_v1/index.html
@@ -1,198 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Tu Página</title>
+    <title>SafeMap</title>
   </head>
   <body>
-    <!-- Header -->
-    <!-- Header -->
     <header>
       <div class="left">
-        <button>Registrate</button>
-        <button>Inicia sesión</button>
+        <button aria-label="Registrarse">Registrate</button>
+        <!-- <button aria-label="Iniciar Sesión">Inicia sesión</button> -->
       </div>
-      <div class="right">
-        <a href="#">Inicio</a>
-        <a href="#">Sobre nosotros</a>
-        <a href="#">Contactanos</a>
-      </div>
+      <nav class="right">
+        <!-- <a href="#" title="Inicio">Inicio</a> -->
+        <a href="#" title="Sobre nosotros">Sobre nosotros</a>
+        <a href="#" title="Contactanos">Contactanos</a>
+      </nav>
     </header>
 
-    <!-- Primera Sección -->
-    <section class="grid-section">
-      <div class="content">
-        <h2>Seguridad en tu area con SafeMap</h2>
-        <p>Mantente a salvo mientras paseas por la ciudad</p>
-        <button>Empieza ya!</button>
-      </div>
-      <div class="image">
-        <img src="assets/map1.png" alt="Imagen 1" />
-      </div>
-    </section>
+    <main>
+      <section class="grid-section">
+        <article class="content">
+          <h2>Seguridad en tu area con SafeMap</h2>
+          <p>Mantente a salvo mientras paseas por la ciudad</p>
+          <a href="#" class="btn" role="button">Empieza ya!</a>
+        </article>
+        <figure class="image">
+          <img src="assets/map1.png" alt="Mapa de la ciudad segura" />
+        </figure>
+      </section>
 
-    <!-- Segunda Sección -->
-    <section class="grid-section double-content">
-      <div class="image-content">
-        <img src="assets/step.png" alt="Imagen 2" />
-        <h2>Da el primer paso</h2>
-        <h3>Registrate!</h3>
-      </div>
-      <div class="image-content">
-        <img src="assets/contact.png" alt="Imagen 3" />
-        <h2>¿Tienes alguna duda?</h2>
-        <h3>¡Te escuchamos! Contactanos</h3>
-      </div>
-    </section>
+      <section class="grid-section double-content">
+        <article class="image-content">
+          <img src="assets/step.png" alt="Icono de un paso" />
+          <h2>Da el primer paso</h2>
+          <a href="#" class="btn" role="button">Registrate!</a>
+        </article>
+        <article class="image-content">
+          <img src="assets/contact.png" alt="Icono de contacto" />
+          <h2>¿Tienes alguna duda?</h2>
+          <a href="#" class="btn" role="button">¡Te escuchamos! Contactanos</a>
+        </article>
+      </section>
 
-    <!-- Tercera Sección -->
-    <section class="grid-section">
-      <div class="image">
-        <img src="assets/walk.jpg" alt="Imagen 4" />
-      </div>
-      <div class="content">
-        <h2>Camina conciente de que puedes estar tranquilo</h2>
-        <h3>
-          Si bien siempre hay un riesgo. Mejor mantenerlo al minimo, ¿Verdad?
-          <br />
-          ¡Paseate sin miedo de terminar en lugares riesgosos!
-        </h3>
-        <button>¡Registrate!</button>
-      </div>
-    </section>
+      <section class="grid-section">
+        <figure class="image">
+          <img src="assets/walk.jpg" alt="Persona caminando tranquilamente" />
+        </figure>
+        <article class="content">
+          <h2>Camina conciente de que puedes estar tranquilo</h2>
+          <h3>
+            Si bien siempre hay un riesgo. Mejor mantenerlo al minimo, ¿Verdad?
+            <br />
+            ¡Paseate sin miedo de terminar en lugares riesgosos!
+          </h3>
+          <a href="#" class="btn" role="button">¡Registrate!</a>
+        </article>
+      </section>
 
-    <!-- Formulario -->
-    <form>
-      <div class="flex-row">
-        <div>
-          <label for="nombre">Nombre:</label><br />
-          <input type="text" id="nombre" name="nombre" />
-        </div>
-        <div>
-          <label for="correo">Correo:</label><br />
-          <input type="text" id="correo" name="correo" />
-        </div>
-      </div>
-      <label for="rol">Rol:</label><br />
-      <select id="rol" name="rol">
-        <option value="rol1">Estudiante de primaria</option>
-        <option value="rol2">Estudiante de secundaria</option>
-        <option value="rol3">Estudiante universitario</option>
-        <option value="rol4">Padre de familia</option>
-        <option value="rol5">Trabajador</option>
-        <option value="rol6">Adulto mayor</option>
-        <option value="rol7">Otro</option></select
-      ><br />
-      <label for="mensaje">Mensaje:</label><br />
-      <textarea id="mensaje" name="mensaje"></textarea><br />
-      <input type="checkbox" id="notificaciones" name="notificaciones" />
-      <label for="notificaciones"
-        >Quiero recibir notificaciones de la empresa</label
-      ><br />
-      <input type="submit" value="Enviar" />
-    </form>
+      <form>
+        <fieldset>
+          <legend>Formulario de Contacto</legend>
+          <div class="flex-row">
+            <div>
+              <label for="nombre">Nombre:</label><br />
+              <input type="text" id="nombre" name="nombre" />
+            </div>
+            <div>
+              <label for="correo">Correo:</label><br />
+              <input type="email" id="correo" name="correo" />
+            </div>
+          </div>
+          <label for="rol">Rol:</label><br />
+          <select id="rol" name="rol">
+            <option value="rol1">Estudiante de primaria</option>
+            <option value="rol2">Estudiante de secundaria</option>
+            <option value="rol3">Estudiante universitario</option>
+            <option value="rol4">Padre de familia</option>
+            <option value="rol5">Trabajador</option>
+            <option value="rol6">Adulto mayor</option>
+            <option value="rol7">Otro</option></select
+          ><br />
+          <label for="mensaje">Mensaje:</label><br />
+          <textarea id="mensaje" name="mensaje"></textarea><br />
+          <input type="checkbox" id="notificaciones" name="notificaciones" />
+          <label for="notificaciones"
+            >Quiero recibir notificaciones de la empresa</label
+          ><br />
+          <input type="submit" value="Enviar" />
+        </fieldset>
+      </form>
+    </main>
 
-    <!-- Footer -->
-    <footer>
-      <p>© 2023 Tu Empresa. Todos los derechos reservados.</p>
-    </footer>
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Tu Página</title>
-  </head>
-  <body>
-    <!-- Header -->
-    <!-- Header -->
-    <header>
-      <div class="left">
-        <button>Registrate</button>
-        <button>Inicia sesión</button>
-      </div>
-      <div class="right">
-        <a href="#">Inicio</a>
-        <a href="#">Sobre nosotros</a>
-        <a href="#">Contactanos</a>
-      </div>
-    </header>
-
-    <!-- Primera Sección -->
-    <section class="grid-section">
-      <div class="content">
-        <h2>Seguridad en tu area con SafeMap</h2>
-        <p>Mantente a salvo mientras paseas por la ciudad</p>
-        <button>Empieza ya!</button>
-      </div>
-      <div class="image">
-        <img src="assets/map1.png" alt="Imagen 1" />
-      </div>
-    </section>
-
-    <!-- Segunda Sección -->
-    <section class="grid-section double-content">
-      <div class="image-content">
-        <img src="assets/step.png" alt="Imagen 2" />
-        <h2>Da el primer paso</h2>
-        <h3>Registrate!</h3>
-      </div>
-      <div class="image-content">
-        <img src="assets/contact.png" alt="Imagen 3" />
-        <h2>¿Tienes alguna duda?</h2>
-        <h3>¡Te escuchamos! Contactanos</h3>
-      </div>
-    </section>
-
-    <!-- Tercera Sección -->
-    <section class="grid-section">
-      <div class="image">
-        <img src="assets/walk.jpg" alt="Imagen 4" />
-      </div>
-      <div class="content">
-        <h2>Camina conciente de que puedes estar tranquilo</h2>
-        <h3>
-          Si bien siempre hay un riesgo. Mejor mantenerlo al minimo, ¿Verdad?
-          <br />
-          ¡Paseate sin miedo de terminar en lugares riesgosos!
-        </h3>
-        <button>¡Registrate!</button>
-      </div>
-    </section>
-
-    <!-- Formulario -->
-    <form>
-      <div class="flex-row">
-        <div>
-          <label for="nombre">Nombre:</label><br />
-          <input type="text" id="nombre" name="nombre" />
-        </div>
-        <div>
-          <label for="correo">Correo:</label><br />
-          <input type="text" id="correo" name="correo" />
-        </div>
-      </div>
-      <label for="rol">Rol:</label><br />
-      <select id="rol" name="rol">
-        <option value="rol1">Estudiante de primaria</option>
-        <option value="rol2">Estudiante de secundaria</option>
-        <option value="rol3">Estudiante universitario</option>
-        <option value="rol4">Padre de familia</option>
-        <option value="rol5">Trabajador</option>
-        <option value="rol6">Adulto mayor</option>
-        <option value="rol7">Otro</option></select
-      ><br />
-      <label for="mensaje">Mensaje:</label><br />
-      <textarea id="mensaje" name="mensaje"></textarea><br />
-      <input type="checkbox" id="notificaciones" name="notificaciones" />
-      <label for="notificaciones"
-        >Quiero recibir notificaciones de la empresa</label
-      ><br />
-      <input type="submit" value="Enviar" />
-    </form>
-
-    <!-- Footer -->
     <footer>
       <p>© 2023 Tu Empresa. Todos los derechos reservados.</p>
     </footer>
