--- a/Lading_page_v1/index.html
+++ b/Lading_page_v1/index.html
@@ -13,7 +13,7 @@
       <nav class="right">
         <!-- <a href="#" title="Inicio">Inicio</a> -->
         <a href="#" title="Sobre nosotros">Sobre nosotros</a>
-        <a href="#" title="Contactanos">Contactanos</a>
+        <a href="#formulario" title="Contactanos">Contactanos</a>
       </nav>
     </header>
 
@@ -38,7 +38,9 @@
         <article class="image-content">
           <img src="assets/contact.png" alt="Icono de contacto" />
           <h2>¿Tienes alguna duda?</h2>
-          <a href="#" class="btn" role="button">¡Te escuchamos! Contactanos</a>
+          <a href="#formulario" class="btn" role="button"
+            >¡Te escuchamos! Contactanos</a
+          >
         </article>
       </section>
 
@@ -47,9 +49,10 @@
           <img src="assets/walk.jpg" alt="Persona caminando tranquilamente" />
         </figure>
         <article class="content">
-          <h2>Camina conciente de que puedes estar tranquilo</h2>
+          <h2>Camina consciente de que puedes estar tranquilo</h2>
           <h3>
-            Si bien siempre hay un riesgo. Mejor mantenerlo al minimo, ¿Verdad?
+            Si bien siempre hay un riesgo, es mejor mantenerlo al mínimo,
+            ¿verdad?
             <br />
             ¡Paseate sin miedo de terminar en lugares riesgosos!
           </h3>
@@ -57,7 +60,7 @@
         </article>
       </section>
 
-      <form>
+      <form id="formulario">
         <fieldset>
           <legend>Formulario de Contacto</legend>
           <div class="flex-row">
